<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/button3"
        android:layout_width="400dp"
        android:layout_height="54dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="21dp"
        android:text="@string/your_name"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="400dp"
        android:layout_height="54dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="21dp"
        android:text="@string/appearance"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="400dp"
        android:layout_height="54dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="21dp"
        android:text="@string/language"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button7"
        android:layout_width="400dp"
        android:layout_height="54dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="21dp"
        android:text="@string/share"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button8"
        android:layout_width="400dp"
        android:layout_height="54dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="536dp"
        android:layout_marginEnd="6dp"
        android:text="@string/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="400dp"
        android:layout_height="54dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="328dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="21dp"
        android:text="@string/refresh"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/HardwareData"
        android:layout_width="400dp"
        android:layout_height="54dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="6dp"
        android:text="@string/hardwareData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="104dp"
        android:layout_height="27dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="129dp"
        android:text="@string/your_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>